syntax = "proto3";

option java_package = "smr.shop.libs.grpc.brand";
option java_multiple_files = true;
import "object/BrandId.proto";

message BrandGrpcResponse {
  int64 id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  string imageUrl = 5;
}

service BrandService {
  rpc getBrandByBrandId(BrandGrpcId) returns (BrandGrpcResponse);
}